Tilføjede skov til mit navn

--- a/div.html
+++ b/div.html
@@ -10,7 +10,7 @@
         Lukas Sloth Hessellund
     </div>
     <div id="1">
-        Alex
+        Alex Skov
     </div>
     <div id="2">
         Rasmus Pedersen
