--- a/div.html
+++ b/div.html
@@ -8,12 +8,15 @@
 <body>
     <div id="0">
         Lukas Sloth Hessellund
+        Aka. Cliff
     </div>
     <div id="1">
         Alex Skov
+        Aka. Mr Freeze
     </div>
     <div id="2">
         Rasmus Pedersen
+        Aka. Young DaggerDort
     </div>
 </body>
 </html>
