--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Ikaros Initiative</title>
+    <title>Manhatten Project</title>
 </head>
 <body>
-    <h1 id="frontpage_heading"> Ikaros Initiative</h1>
+    <h1 id="frontpage_heading"> Manhatten Project</h1>
 
 </body>
 </html>
