--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Manhatten Project</title>
+
+    <!-- Koden herunder er til at hente verdenskortet.
+    Det nederste script er indsat i det det øverste ikke virker uden -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://unpkg.com/topojson@3"></script>
+
 </head>
 <body>
     <h1 id="frontpage_heading"> Manhatten Project</h1>
 
+    <!-- Herunder er en div til at have kortet i og
+    et link til javascriptet til kortet. -->
+    <div id="map-container"></div>
+    <script src="your-map-script.js"></script>
 </body>
 </html>
