--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -1,4 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="quiz-style.css">
+    <title>Solcelle quiz</title>
+</head>
+<body>
 <div id="quiz"></div>
 <button id="submit"> Submit answers </button>
 <div id="result"></div>
+<script src="quiz.js"></script>
 
+</body>
+</html>
