--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -7,9 +7,17 @@
     <title>Solcelle quiz</title>
 </head>
 <body>
-<div id="quiz"></div>
-<button id="submit"> Submit answers </button>
+
+<div class="quiz-container">
+    <div id="quiz"></div>
+</div>
+
+<button id="previous">Previous question</button>
+<button id="next">Next question</button>
+<button id="submit">Submit answers</button>
+
 <div id="result"></div>
+
 <script src="quiz.js"></script>
 
 </body>
