--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 
+<h1>What do you know about solar energy?</h1>
+
 <div class="quiz-container">
     <div id="quiz"></div>
 </div>
 
+<div id="results"></div>
+
 <button id="previous">Previous question</button>
 <button id="next">Next question</button>
 <button id="submit">Submit answers</button>
-
-<div id="result"></div>
 
 <script src="quiz.js"></script>
 
