--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="quiz-style.css">
-    <title>Solcelle quiz</title>
+    <title>Solar energy quiz</title>
 </head>
 <body>
 
