--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -5,22 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="quiz-style.css">
     <title>Solar energy quiz</title>
+    <link rel="shortcut icon" href="sun-cursor.png"/>
 </head>
 <body>
 
-<h1>What do you know about solar energy?</h1>
+<a href="/semesterprojekt/index.html">
+    <button id="return">Return to map</button>
+</a>
+
+
+<h1>TEST YOUR KNOWLEDGE</h1>
 
 <div class="quiz-container">
     <div id="quiz"></div>
 </div>
 
-<div id="results"></div>
-
 <button id="previous">Previous question</button>
 <button id="next">Next question</button>
 <button id="submit">Submit answers</button>
 
-<script src="quiz.js"></script>
+<div id="results-container">
+    <div id="results"></div>
+</div>
+
+<script src="quiz2.js"></script>
 
 </body>
 </html>
