--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Manhatten Project</title>
-    
+    <link rel="shortcut icon" href="sun-cursor.png"/>
 
     <!-- Koden herunder er til at hente verdenskortet.
     Det nederste script er indsat i det det øverste ikke virker uden -->
