--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="quiz-style.css"> 
-    <title>Solar energy quiz</title> 
-    <link rel="shortcut icon" href="/semesterprojekt/sun-icon.png"/>
+    <link rel="stylesheet" href="quiz-style.css"> <!-- CSS link -->
+    <title>Solar energy quiz</title> <!-- Titel i tab -->
+    <link rel="shortcut icon" href="/semesterprojekt/sun-icon.png"/> <!-- Sol-ikon i tab -->
 </head>
 <body>
 
