Forside til quiz og returknap fix

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<a href="/semesterprojekt/index.html">
+<a id="return-container" href="/semesterprojekt/index.html"> <!-- Linker tilbage til forsiden -->
     <button id="return">Return to map</button> <!-- Returknap til forsiden -->
 </a>
 
-<h1>TEST YOUR KNOWLEDGE</h1> <!-- Overskrift -->
+<h1>WELCOME TO THE SOLAR ENERGY QUIZ</h1> <!-- Overskrift -->
 
 <div class="quiz-container"> <!-- Container til at have quizzen i -->
     <div id="quiz"></div>
