--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -22,7 +22,7 @@
           <table id="sidebar">
         <tr><td><a href="index.html">Map</a></td></tr>
         <tr><td><a href="/quiz/quiz.html">Quiz</a></td></tr>
-        <tr><td><a href="test1.html">Test1</a></td></tr>
+        <tr><td><a href="/statistics/statistics.html">Statistics</a></td></tr>
         <tr><td><a href="index.html">Test2</a></td></tr>
     </table>
         </nav>
