--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -18,7 +18,7 @@
         <h2 id="popUpHeader">Welcome to our site about solar energy</h2>
         <p id="popUpText"> On this site you can click on our map to see <br>
             <span id="bold"> how much of a countrys area that needs to be filled
-            with solar panels to accomodate the countrys energy usage.</span><br>
+            with solar panels to accommodate the countrys energy usage.</span><br>
             <br>
             We have also made a <span id="bold"> quiz about solar panels and solar energy </span><br>
             found in the sidebar alongside some <span id="bold"> statistics about solar energy.</span>
