--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -23,7 +23,7 @@
             We have also made a <span id="bold"> quiz about solar panels and solar energy </span><br>
             found in the sidebar alongside some <span id="bold"> statistics about solar energy.</span>
         </p>
-        <button id="closePopUp"> Close!</button>
+        <button id="closePopUp"> Get exploring!</button>
     </div>
 
     <label class="hamburger-menu">
