--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -9,24 +9,24 @@
 </head>
 <body>
 
-<a id="return-container" href="/semesterprojekt/index.html"> <!-- Linker tilbage til forsiden -->
+<a id="returnContainer" href="/semesterprojekt/index.html"> <!-- Linker tilbage til forsiden -->
     <button id="return">Return to map</button> <!-- Returknap til forsiden -->
 </a>
 
 <h1>WELCOME TO THE SOLAR ENERGY QUIZ</h1> <!-- Overskrift -->
 
 <div id="container">
-    <div class="quiz-container"> <!-- Container til at have quizzen i -->
+    <div class="quizContainer"> <!-- Container til at have quizzen i -->
         <div id="quiz"></div>
     </div>
-    <div id="button-container"> <!-- Container til at have knapperne i -->
+    <div id="buttonContainer"> <!-- Container til at have knapperne i -->
         <button id="previous">Previous question</button> <!-- Knap, der går tilbage til forrige spørgsmål -->
         <button id="next">Next question</button> <!-- Knap, der springer frem til næste spørgsmål -->
         <button id="submit">Submit answers</button> <!-- Knap, der evaluerer ens svar -->
     </div>
 </div>
 
-<div id="results-container"> <!-- Container til at have svarerne i -->
+<div id="resultsContainer"> <!-- Container til at have svarerne i -->
     <div id="results"></div>
 </div>
 
