--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -33,8 +33,8 @@
         <nav> <!-- Container til navigationsindhold -->
           <table id="sidebar"> <!-- Tabel til indholdet af sidebar -->
             <tr><td><a href="index.html">Map</a></td></tr> <!-- tab til siden med kort -->
-            <tr><td><a href="/quiz/quiz.html">Quiz</a></td></tr> <!-- tab til siden med quiz -->
-            <tr><td><a href="/statistics/statistics.html">Statistics</a></td></tr> <!-- tab til siden med statistik -->
+            <tr><td><a href="quiz/quiz.html">Quiz</a></td></tr> <!-- tab til siden med quiz -->
+            <tr><td><a href="statistics/statistics.html">Statistics</a></td></tr> <!-- tab til siden med statistik -->
           </table>
         </nav>
     </aside>
