Ændring af kort zoom

--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -44,6 +44,7 @@
         <button data-continent="Africa">Africa</button> <!-- Knap, der zoomer ind på Afrika -->
         <button data-continent="Asia">Asia</button> <!-- Knap, der zoomer ind på Asien -->
         <button data-continent="Europe">Europe</button> <!-- Knap, der zoomer ind på Europa -->
+        <button data-continent="MiddleEast">Middle East</button> <!-- Knap, der zoomer ind på Mellemøsten -->
         <button data-continent="NorthAmerica">North America</button> <!-- Knap, der zoomer ind på Nordamerika -->
         <button data-continent="SouthAmerica">South America</button> <!-- Knap, der zoomer ind på Sydamerika -->
         <button data-continent="Australia">Australia</button> <!-- Knap, der zoomer ind på Australien -->
