--- a/semesterprojekt/statistics/statistics.html
+++ b/semesterprojekt/statistics/statistics.html
@@ -8,7 +8,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <a id="returnContainer" href="semesterprojekt/index.html"> <!-- Linker tilbage til forsiden -->
+    <a id="returnContainer" href="/semesterprojekt/index.html"> <!-- Linker tilbage til forsiden -->
         <button id="returnButton">Return to map</button> <!-- Returknap til forsiden -->
     </a>
     <h1 id="statHeadline">Statistics</h1> <!-- Overskrift -->
