--- a/semesterprojekt/quiz/quiz.html
+++ b/semesterprojekt/quiz/quiz.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="quiz-style.css"> <!-- CSS link -->
     <title>Solar energy quiz</title> <!-- Titel i tab -->
-    <link rel="shortcut icon" href="/semesterprojekt/sun-icon.png"/> <!-- Sol-ikon i tab -->
+    <link rel="shortcut icon" href="semesterprojekt/sun-icon.png"/> <!-- Sol-ikon i tab -->
 </head>
 <body>
 
-<a id="returnContainer" href="/semesterprojekt/index.html"> <!-- Linker tilbage til forsiden -->
+<a id="returnContainer" href="..index.html"> <!-- Linker tilbage til forsiden -->
     <button id="return">Return to map</button> <!-- Returknap til forsiden -->
 </a>
 
