--- a/semesterprojekt/quiz/quiz.html
+++ b/semesterprojekt/quiz/quiz.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<a id="returnContainer" href="..index.html"> <!-- Linker tilbage til forsiden -->
+<a id="returnContainer" href="../index.html"> <!-- Linker tilbage til forsiden -->
     <button id="return">Return to map</button> <!-- Returknap til forsiden -->
 </a>
 
