--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -35,6 +35,7 @@
             <tr><td><a href="index.html">Map</a></td></tr> <!-- tab til siden med kort -->
             <tr><td><a href="quiz/quiz.html">Quiz</a></td></tr> <!-- tab til siden med quiz -->
             <tr><td><a href="statistics/statistics.html">Statistics</a></td></tr> <!-- tab til siden med statistik -->
+            <tr><td><a href="about/about.html">About</a></td></tr> <!-- tab til siden med about -->
           </table>
         </nav>
     </aside>
