--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -17,11 +17,11 @@
     <div id="popUp"> <!-- div til popUp vinduet -->
         <h2 id="popUpHeader">Welcome to our site about solar energy</h2> <!-- Overskrift i popUp vinduet -->
         <p id="popUpText"> On this site you can click on our map to see <br> <!-- Brødteksten i popUp vinduet -->
-            <span id="bold"> how much of a countrys area that needs to be filled
-            with solar panels to accommodate the countrys energy usage.</span><br>
+            <strong> how much of a countrys area that needs to be filled
+            with solar panels to accommodate the countrys energy usage.</strong><br>
             <br>
-            We have also made a <span id="bold"> quiz about solar panels and solar energy </span><br>
-            found in the sidebar alongside some <span id="bold"> statistics about solar energy.</span>
+            We have also made a <strong> quiz about solar panels and solar energy </strong><br>
+            found in the sidebar alongside some <strong> statistics about solar energy.</strong>
         </p>
         <button id="closePopUp"> Get exploring!</button> <!-- Knappen, der lukker popUp vinduet -->
     </div>
