--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -40,6 +40,15 @@
         </nav>
     </aside>
 
+    <aside class="sidebar2"> <!-- Aside bruges til sideløbende indhold -->
+        <nav> <!-- Container til navigationsindhold -->
+            <div id="sidebar2"> <!-- Div til sidebar2 indhold -->
+                <p id="demo2"></p> <!-- Tooltip data -->
+            </div>
+        </nav>
+    </aside>
+    
+
     <div class="buttons"> <!-- Div til knapperne der hører til kortet -->
         <button data-continent="World">World</button> <!-- Knappen, der bruges til at zoome ud på hele verdenen -->
         <button data-continent="Africa">Africa</button> <!-- Knap, der zoomer ind på Afrika -->
