--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!-- Hovedoverskrift -->
-    <h1 id="frontpage_heading">SUNDOWN AVENUE</h1>
+    <h1 id="frontpageHeading">SUNDOWN AVENUE</h1>
 
     <!-- Kort-container -->
     <div id="map-container"></div>
