--- a/semesterprojekt/statistics/statistics.html
+++ b/semesterprojekt/statistics/statistics.html
@@ -11,7 +11,7 @@
     <a id="returnContainer" href="../index.html"> <!-- Linker tilbage til forsiden -->
         <button id="returnButton">Return to map</button> <!-- Returknap til forsiden -->
     </a>
-    <h1 id="statHeadline">Statistics</h1> <!-- Overskrift -->
+    <h1 id="statHeadline">STATISTICS</h1> <!-- Overskrift -->
     <div id="barchart"></div>
     <script src="barchart.js"></script>
 </body>
