--- a/semesterprojekt/statistics/statistics.html
+++ b/semesterprojekt/statistics/statistics.html
@@ -13,6 +13,7 @@
     </a>
     <h1 id="statHeadline">STATISTICS</h1> <!-- Overskrift -->
     <div id="barchart"></div>
+    <div id="barchart-land"></div>
     <script src="barchart.js"></script>
 </body>
 </html>
