--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -16,14 +16,14 @@
 
     <div id="popUp"> <!-- div til popUp vinduet -->
         <h2 id="popUpHeader">Welcome to our site about solar energy</h2> <!-- Overskrift i popUp vinduet -->
-        <p id="popUpText"> On this site you can click on our map to see <br> <!-- Brødteksten i popUp vinduet -->
-            <strong> how much of a countrys area that needs to be filled
+        <p id="popUpText"> On this site, you can click on our map to see <br> <!-- Brødteksten i popUp vinduet -->
+            <strong> how much of a country's area that needs to be filled
             with solar panels to accommodate the countrys energy usage.</strong><br>
             <br>
             We have also made a <strong> quiz about solar panels and solar energy </strong><br>
             found in the sidebar alongside some <strong> statistics about solar energy.</strong>
         </p>
-        <button id="closePopUp"> Get exploring!</button> <!-- Knappen, der lukker popUp vinduet -->
+        <button id="closePopUp"> Explore!</button> <!-- Knappen, der lukker popUp vinduet -->
     </div>
 
     <label class="hamburger-menu"> <!-- Label til dropdown menu -->
@@ -60,8 +60,13 @@
         <button data-continent="Australia">Australia</button> <!-- Knap, der zoomer ind på Australien -->
     </div>
 
-    <!-- Hovedoverskrift -->
-    <h1 id="frontpageHeading">SUNDOWN AVENUE</h1>
+    <div id="headingContainer"> <!-- Container til over- og underskrift -->
+        <!-- Hovedoverskrift -->
+        <h1 id="frontpageHeading">SUNDOWN AVENUE</h1>
+        <!-- Underoverskrift -->
+        <h3 id="miniHeading">Press any country to see the required landmass filled with solar panels 
+        <br> needed to accommodate their energy consumption</h3>
+    </div>
 
     <!-- Kort-container -->
     <div id="map-container"></div>
