--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -43,7 +43,7 @@
     <aside class="sidebar2"> <!-- Aside bruges til sideløbende indhold -->
         <nav> <!-- Container til navigationsindhold -->
             <div id="sidebar2"> <!-- Div til sidebar2 indhold -->
-                <p id="demo2"></p> <!-- Tooltip data -->
+                <p id="tooltip2"></p> <!-- Tooltip data -->
             </div>
         </nav>
     </aside>
@@ -78,6 +78,6 @@
     <script src="scripts/your-map-script.js"></script>
 
     <!-- Element til visning af information -->
-    <p id="demo"></p>
+    <p id="tooltip"></p>
 </body>
 </html>
