--- a/semesterprojekt/statistics/statistics.html
+++ b/semesterprojekt/statistics/statistics.html
@@ -12,8 +12,13 @@
         <button id="returnButton">Return to map</button> <!-- Returknap til forsiden -->
     </a>
     <h1 id="statHeadline">STATISTICS</h1> <!-- Overskrift -->
-    <div id="barchart"></div>
-    <div id="barchart-land"></div>
+    <div class id="chartContainer"></div>
+
+    <div class id="statisticsButtons">
+    <button id="landPercentageButton">Average land in percent</button>
+    <button id="consumptionButton">Yearly energy consumption</button>
+    </div>
+
     <script src="barchart.js"></script>
 </body>
 </html>
