--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -31,7 +31,7 @@
     </label>
     <aside class="sidebar"> <!-- Aside er brugt, da indholdet er sideløbende med hovedindholdet -->
         <nav> <!-- Container til navigationsindhold -->
-          <table id="sidebar"> <!-- Tabel til indholdet af sidebar -->
+          <table id="sidebar"> <!-- Tabel til indholdet af sidebaren -->
             <tr><td><a href="index.html">Map</a></td></tr> <!-- tab til siden med kort -->
             <tr><td><a href="quiz/quiz.html">Quiz</a></td></tr> <!-- tab til siden med quiz -->
             <tr><td><a href="statistics/statistics.html">Statistics</a></td></tr> <!-- tab til siden med statistik -->
