--- a/semesterprojekt/About/about.html
+++ b/semesterprojekt/About/about.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../sun-icon.png"/> <!-- Ikon i tab -->
 </head>
 <body>
-    <a id="returnContainer" href="../index.html"> <!-- Linker tilbage til forsiden -->
+    <a id="returnContainer" href="../index.html"> <!-- Linker tilbage til forsiden så man kommer hjem -->
         <button id="return">Return to map</button> <!-- Returknap til forsiden -->
     </a>
 
