--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -64,8 +64,8 @@
         <!-- Hovedoverskrift -->
         <h1 id="frontpageHeading">SUNDOWN AVENUE</h1>
         <!-- Underoverskrift -->
-        <h3 id="miniHeading">Press any country to see the required landmass filled with solar panels 
-        <br> needed to accommodate their energy consumption</h3>
+        <h3 id="miniHeading">Click on any country to discover the landmass needed to meet its energy demands
+            <br>using solar panels or nuclear power plants</h3>
     </div>
 
     <!-- Kort-container -->
