--- a/semesterprojekt/statistics/statistics.html
+++ b/semesterprojekt/statistics/statistics.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="statistics.css">
     <title>Solar power statistics</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script> <!-- Link til d3 -->
 </head>
 <body>
     <a id="returnContainer" href="../index.html"> <!-- Linker tilbage til forsiden -->
         <button id="returnButton">Return to map</button> <!-- Returknap til forsiden -->
     </a>
     <h1 id="statHeadline">STATISTICS</h1> <!-- Overskrift -->
-    <div class id="chartContainer"></div>
+    <div class id="chartContainer"></div> <!-- Container til at have graferne i -->
 
-    <div class id="statisticsButtons">
-    <button id="landPercentageButton">Average land in percent</button>
-    <button id="consumptionButton">Yearly energy consumption</button>
+    <div class id="statisticsButtons"> <!-- Div til at have knapperne i -->
+    <button id="landPercentageButton">Average land in percent</button> <!-- Knap der skifter visningen af graf -->
+    <button id="consumptionButton">Yearly energy consumption</button> <!-- Knap der skifter visningen af graf -->
     </div>
 
-    <script src="barchart.js"></script>
+    <script src="barchart.js"></script> <!-- Link til javascript -->
 </body>
 </html>
