--- a/semesterprojekt/about/about.html
+++ b/semesterprojekt/about/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about-style.css"> <!-- Linker til CSS fil -->
+    <link rel="stylesheet" href="aboutStyle.css"> <!-- Linker til CSS fil -->
     <title>SUNDOWN AVENUE</title> <!-- Navnet i tab -->
-    <link rel="shortcut icon" href="../sun-icon.png"/> <!-- Ikon i tab -->
+    <link rel="shortcut icon" href="../sunIcon.png"/> <!-- Ikon i tab -->
 </head>
 <body>
     <a id="returnContainer" href="../index.html"> <!-- Linker tilbage til forsiden så man kommer hjem -->
