--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> <!-- Linker til CSS fil -->
     <title>SUNDOWN AVENUE</title> <!-- Navnet i tab -->
-    <link rel="shortcut icon" href="sun-icon.png"/> <!-- Ikon i tab -->
+    <link rel="shortcut icon" href="sunIcon.png"/> <!-- Ikon i tab -->
 
     <!-- Koden herunder er til at hente verdenskortet -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -72,10 +72,10 @@
     <div id="map-container"></div>
 
     <!-- Link til pop-up vinduets Javascript-fil -->
-    <script src="scripts/pop-up.js"></script>
+    <script src="scripts/popUp.js"></script>
 
     <!-- Link til kortets JavaScript-fil -->
-    <script src="scripts/your-map-script.js"></script>
+    <script src="scripts/mapScript.js"></script>
 
     <!-- Element til visning af information -->
     <p id="tooltip"></p>
