--- a/semesterprojekt/statistics/statistics.html
+++ b/semesterprojekt/statistics/statistics.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="statistics.css">
     <title>Solar power statistics</title>
+    <link rel="shortcut icon" href="..\sunIcon.png"/> <!-- Sol-ikon i tab -->
     <script src="https://d3js.org/d3.v7.min.js"></script> <!-- Link til d3 -->
 </head>
 <body>
