--- a/semesterprojekt/index.html
+++ b/semesterprojekt/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Kort-container -->
-    <div id="map-container"></div>
+    <div id="mapContainer"></div>
 
     <!-- Link til pop-up vinduets Javascript-fil -->
     <script src="scripts/popUp.js"></script>
