--- a/semesterprojekt/statistics/statistics.html
+++ b/semesterprojekt/statistics/statistics.html
@@ -14,6 +14,7 @@
     </a>
     <h1 id="statHeadline">STATISTICS</h1> <!-- Overskrift -->
     <div class id="chartContainer"></div> <!-- Container til at have graferne i -->
+    <div class id="tekst"></div>
 
     <div class id="statisticsButtons"> <!-- Div til at have knapperne i -->
     <button id="landPercentageButton">Average land in percent</button> <!-- Knap der skifter visningen af graf -->
